--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vercel/analytics": "^1.6.1",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^20",
